# Convolutional_neuronal_network

./: .gitignore  CMakeLists.txt  README.md  build.bat  export_bloodmnist.py
data/: bloodmnist_info.txt
include/: ActivationFactory.h  ConvLayer.h  CudaUtils.h  FCLayer.h  IActivation.h  ILoss.h  Layer.h  LossFactory.h  Network.h  PoolLayer.h  Tensor.h
include/activations/: LeakyReLU.h  Linear.h  ReLU.h  Sigmoid.h  Softmax.h  Tanh.h
include/losses/: CrossEntropyLoss.h  MSELoss.h
src/: ActivationFactory.cu  ConvLayer.cu  CudaUtils.cu  FCLayer.cu  LossFactory.cu  Network.cu  PoolLayer.cu  Tensor.cu  main.cu
src/activations/: LeakyReLU.cu  Linear.cu  ReLU.cu  Sigmoid.cu  Softmax.cu  Tanh.cu
src/losses/: CrossEntropyLoss.cu  MSELoss.cu
tests/: bloodMNIST.cpp
